Adding slug to tips 16 to 33, shortening url

--- a/frontend/tips/16-take-screenshot-on-failure/main.mdx
+++ b/frontend/tips/16-take-screenshot-on-failure/main.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Take Screenshot on Failure'
 id: '16-take-screenshot-on-failure'
+slug: /16-take-screenshot-on-failure
 contentUrl: "tips/take-screenshot-on-failure/16-take-screenshot-on-failure"
 sidebar_label: Take Screenshot on Failure
 text: "With browser tests it can often be challenging to track down the issue that caused a failure. By itself, a failure message along with a stack trace is hardly enough to go on, especially when you run the test again and it passes. You may or may not be able to recreate that initial error message, and might be left wondering what it was, and whether or not it will cause issues in the future."
@@ -8,8 +9,6 @@ number: 16
 hide_table_of_contents: true
 level: 2
 publish_date: 2015-07-08
-last_update:
-  date: 2023-02-28
 tags:
   - 'reporting'
   - 'screenshot'
@@ -38,12 +37,12 @@ Here is an example.
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"16-take-screenshot-on-failure"} languages={[
-    { label: 'Python', value: 'python' },
-    { label: 'C#', value: 'csharp' },
-    { label: 'Java', value: 'java' },
-    { label: 'JavaScript', value: 'javascript' },
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Python', value: 'python'},
+    {label: 'C#', value: 'csharp'},
+    {label: 'Java', value: 'java'},
+    {label: 'JavaScript', value: 'javascript'},
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
