--- a/frontend/tips/19-data-driven-testing/main.mdx
+++ b/frontend/tips/19-data-driven-testing/main.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Data Driven Testing'
 id: '19-data-driven-testing'
+slug: /19-data-driven-testing
 contentUrl: "tips/data-driven-testing/19-data-driven-testing"
 sidebar_label: Data Driven Testing
 text: "There are times when you run across functionality you want to test repeatedly with various inputs to see how the system behaves. We're going to go over a way to do this that will take some of the burden out of the process."
@@ -8,8 +9,6 @@ number: 19
 hide_table_of_contents: true
 level: 2
 publish_date: 2015-07-14
-last_update:
-  date: 2023-02-28
 tags:
   - 'data-driven testing'
   - 'csv'
@@ -41,8 +40,8 @@ hard-coding these values directly in your test code.
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"19-data-driven-testing"} languages={[
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
