--- a/frontend/tips/26-cloud/main.mdx
+++ b/frontend/tips/26-cloud/main.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Cloud'
 id: '26-cloud'
+slug: /26-cloud
 contentUrl: "tips/cloud/26-cloud"
 sidebar_label: Cloud
 text: "In order to test features in a previous version of Chrome, you would need to run a virtual machine (VM) on your computer with a legit version of Windows installed on the VM."
@@ -8,8 +9,6 @@ number: 26
 hide_table_of_contents: true
 level: 1
 publish_date: 2015-09-15
-last_update:
-  date: 2023-02-27
 tags:
   - 'sauce labs'
   - 'test infrastructure'
@@ -55,7 +54,7 @@ Here is an example.
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"26-cloud"} languages={[
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
