--- a/frontend/tips/29-chrome-driver/main.mdx
+++ b/frontend/tips/29-chrome-driver/main.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'ChromeDriver'
 id: 29-chrome-driver
+slug: /29-chrome-driver
 contentUrl: "tips/chrome-driver/29-chrome-driver"
 sidebar_label: ChromeDriver
 text: "It's straightforward to get your tests running locally against Firefox. But when you want to run them against a different browser like Chrome, you quickly run into configuration overhead that can seem overly complex and lacking in code examples for getting started."
@@ -8,8 +9,6 @@ number: 29
 hide_table_of_contents: true
 level: 2
 publish_date: 2015-08-25
-last_update:
-  date: 2023-03-15
 tags:
   - drivers
   - chromedriver
@@ -48,11 +47,11 @@ Let's step through an example using ChromeDriver ([download here](https://chrome
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"29-chrome-driver"} languages={[
-    { label: 'Python', value: 'python' },
-    { label: 'C#', value: 'csharp' },
-    { label: 'Java', value: 'java' },
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Python', value: 'python'},
+    {label: 'C#', value: 'csharp'},
+    {label: 'Java', value: 'java'},
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
