--- a/frontend/tips/31-archives/main.mdx
+++ b/frontend/tips/31-archives/main.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Accessing Previous Tips Archive'
 id: '31-archives'
+slug: /31-archives
 contentUrl: "tips/archives/31-archives"
 sidebar_label: Accessing Previous Tips Archive
 text: "Let me guess you subscribed to a free, weekly Selenium tip newsletter and aren't sure of how to access
@@ -9,8 +10,6 @@ number: 31
 hide_table_of_contents: true
 level: 1
 publish_date: 2014-12-23
-last_update:
-  date: 2023-02-27
 tags:
   - 'archives'
 category:
@@ -28,7 +27,7 @@ previously written tips (or are unaware that this is even a possibility).
 
 Check out [the Elemental Selenium Tip Archives](/tips)! Each tip is available there, and it's simple to traverse.
 
-All of the tips are tagged, categorized, and marked by level of difficulty. Each marking is clickable (both
+All the tips are tagged, categorized, and marked by level of difficulty. Each marking is clickable (both
 within the tip and when viewing all tips on the archive page), and will return a filtered result.
 
 ## Example
