--- a/frontend/tips/32-css-vs-xpath/main.mdx
+++ b/frontend/tips/32-css-vs-xpath/main.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'CSS vs. Xpath'
 id: 32-css-vs-xpath
+slug: /32-css-vs-xpath
 contentUrl: "tips/css-vs-xpath/32-css-vs-xpath"
 sidebar_label: 'CSS vs. Xpath'
 text: "One of the most heated and subjective conversations in the Selenium community is which locator strategy is better, often circling around two -- XPath and CSS."
@@ -8,8 +9,6 @@ number: 32
 hide_table_of_contents: true
 level: 2
 publish_date: 2014-01-07
-last_update:
-    date: 2023-03-15
 tags:
   - selectors
   - xpath
@@ -48,8 +47,8 @@ XPath stack up and fall down. Then we will be able to determine a more helpful l
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"32-css-vs-xpath"} languages={[
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
