--- a/frontend/tips/33-css-vs-xpath-2/main.mdx
+++ b/frontend/tips/33-css-vs-xpath-2/main.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'CSS vs. XPath 2'
 id: '33-css-vs-xpath-2'
+slug: /33-css-vs-xpath-2
 contentUrl: "tips/css-vs-xpath-2/33-css-vs-xpath-2"
 sidebar_label: 'CSS vs. Xpath 2'
 text: "To get a real taste of what the performance difference is between CSS and XPath, we will need to dig deeper. We'll do that by running everything from a local machine while using a performance benchmarking utility."
@@ -8,8 +9,6 @@ number: 33
 hide_table_of_contents: true
 level: 2
 publish_date: 2014-01-14
-last_update:
-    date: 2023-03-15
 tags:
   - selectors
   - xpath
@@ -47,5 +46,5 @@ focus on a specific Selenium action rather than the entire test run, and run thi
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"33-css-vs-xpath-2"} languages={[
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Ruby', value: 'ruby'},
+]}/>
