--- a/frontend/tips/17-retrieve-http-status-codes/main.mdx
+++ b/frontend/tips/17-retrieve-http-status-codes/main.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Retrieve HTTP Status Codes'
 id: '17-retrieve-http-status-codes'
+slug: /17-retrieve-http-status-codes
 contentUrl: 'tips/retrieve-http-status-codes/17-retrieve-http-status-codes'
 sidebar_label: Retrieve HTTP Status Codes
 text: 'There are times when you are testing a page (or numerous pages) and you want to verify that it responded correctly. A great way to handle this is by checking the HTTP Status Code that the browser received. However this functionality is not available in Selenium WebDriver.'
@@ -8,8 +9,6 @@ number: 17
 hide_table_of_contents: true
 level: 3
 publish_date: 2015-10-15
-last_update:
-  date: 2023-04-06
 tags:
   - 'test http status'
   - 'retrieve http status'
@@ -31,8 +30,8 @@ is not available in Selenium WebDriver.
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"17-retrieve-http-status-codes"} languages={[
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
