--- a/frontend/tips/18-how-to-figure-out-what-to-test/main.mdx
+++ b/frontend/tips/18-how-to-figure-out-what-to-test/main.mdx
@@ -1,14 +1,13 @@
 ---
 title: 'How To Figure Out What to Test'
 id: '18-what-to-test'
+slug: /18-what-to-test
 contentUrl: "tips/how-to-figure-out-what-to-test/18-what-to-test"
 sidebar_label: How To Figure Out What to Test
 text: "There is a lot to figure out when it comes to automated web testing, but where do you start? If you've already started, how do you know you're on the right track? And how do you avoid testing everything in every browser without missing important issues?"
 number: 18
 hide_table_of_contents: true
 publish_date: 2015-10-13
-last_update:
-  date: 2023-02-22
 tags:
   - 'test strategy'
 level: 1
