--- a/frontend/tips/22-locator-strategy/main.mdx
+++ b/frontend/tips/22-locator-strategy/main.mdx
@@ -1,14 +1,13 @@
 ---
 title: 'Locator Strategy'
 id: '22-locator-strategy'
+slug: /22-locator-strategy
 contentUrl: "tips/locator-strategy/22-locator-strategy"
 sidebar_label: Locator Strategy
 text: "In web design CSS (Cascading Style Sheets) is used to apply styles to the markup (HTML) on a page. CSS is able to do this by declaring which bits of the the markup it wants to interact with through the use of selectors."
 number: 22
 hide_table_of_contents: true
 publish_date: 2013-10-22
-last_update:
-  date: 2023-02-22
 tags:
   - 'locators'
   - 'locator strategy'
@@ -43,8 +42,8 @@ cross-browser performant, simpler to maintain, and powerful -- that's CSS Select
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"22-locator-strategy"} languages={[
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
