--- a/frontend/tips/23-dynamic-pages/main.mdx
+++ b/frontend/tips/23-dynamic-pages/main.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Dynamic Pages'
 id: '23-dynamic-pages'
+slug: /23-dynamic-pages
 contentUrl: "tips/dynamic-pages/23-dynamic-pages"
 sidebar_label: Dynamic Pages
 text: "Let's say you want to test some functionality of a web application but it loads things dynamically. You might think about using a hard-coded sleep (that you constantly tweak due to test failures) or you use a blanket timeout that you likely bump up to address test instabilities as well."
@@ -8,8 +9,6 @@ number: 23
 hide_table_of_contents: true
 level: 2
 publish_date: 2015-10-13
-last_update:
-  date: 2023-02-28
 tags:
   - 'dynamic pages'
   - 'ajax'
@@ -47,8 +46,8 @@ Let's continue with an example.
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"23-dynamic-pages"} languages={[
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
