--- a/frontend/tips/24-rest-apis/main.mdx
+++ b/frontend/tips/24-rest-apis/main.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'REST APIs'
 id: '24-rest-apis'
+slug: /24-rest-apis
 contentUrl: "tips/rest-apis/24-rest-apis"
 sidebar_label: REST APIs
 text: "When we list out the properties that make a test a good test, some things that often come up are: Precise. The test should test one thing, and one thing only. A bug in some part of the application that is unrelated to the test should not cause the test to fail."
@@ -8,8 +9,6 @@ number: 24
 hide_table_of_contents: true
 level: 2
 publish_date: 2013-11-5
-last_update:
-  date: 2023-03-09
 tags:
   - 'REST APIs'
   - 'test setup'
@@ -55,6 +54,6 @@ support for calling into REST APIs to virtually any test suite.
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"24-rest-apis"} languages={[
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
