--- a/frontend/tips/25-how-to-work-with-tables/main.mdx
+++ b/frontend/tips/25-how-to-work-with-tables/main.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'How To Work With Tables'
 id: '25-tables'
+slug: /25-tables
 contentUrl: "tips/how-to-work-with-tables/25-tables"
 sidebar_label: How To Work With Tables
 text: "Odds are at some point you've come across the use of tables in a web application to display data or information to a user, giving them the option to sort and manipulate it. Depending on your application it can be quite common and something you will want to write an automated test for."
@@ -8,8 +9,6 @@ number: 25
 hide_table_of_contents: true
 level: 2
 publish_date: 2015-10-13
-last_update:
-  date: 2023-03-09
 tags:
   - 'tables'
   - 'sorting'
@@ -40,24 +39,8 @@ But keep in mind that if you care about older browsers (e.g., Internet Explorer 
 work on them. In those cases your best bet is to find a workable solution for the short term and get a front-end
 developer to update the table with helpful attributes.
 
-> ### _**A quick primer on Tables and CSS Pseudo-classes**_
->
-> Understanding the broad strokes of an HTML table's structure goes a long way in writing effective automation against
-> it. So here's a quick primer.
->
-> > A table has:
-> >
-> > - a header (e.g. `<thead>`)
-> > - a body (e.g. `<tbody>`).
-> > - rows (e.g. `<tr>`) -- horizontal slats of data
-> > - columns -- vertical slats of data
->
-> > Columns are made up of cells, which are:
-> >
-> > - a header (e.g., `<th>`)
-> > - one or more standard cells (e.g., `<td>` -- which is short for **table data**)
->
-> CSS Pseudo-classes work by walking through the structure of an object and targeting a specific part of it based on
+> ### _**A quick primer on Tables and CSS Pseudo-classes**_Understanding the broad strokes of an HTML table's structure goes a long way in writing effective automation against
+> it. So here's a quick primer.> A table has:- a header (e.g. `<thead>`)- a body (e.g. `<tbody>`).- rows (e.g. `<tr>`) -- horizontal slats of data- columns -- vertical slats of data> Columns are made up of cells, which are:- a header (e.g., `<th>`)- one or more standard cells (e.g., `<td>` -- which is short for **table data**)CSS Pseudo-classes work by walking through the structure of an object and targeting a specific part of it based on
 > a relative number (e.g. the **third** `<td>` cell from a row in the table body). This works well with tables since
 > we can grab all instances of a target (e.g. the third `<td>` cell from each `<tr>` in the table body) and use it in
 > our test -- which would give us all of the data for the third column.
@@ -70,12 +53,12 @@ Let's step through some examples for a common set of table functionality like so
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"25-how-to-work-with-tables"} languages={[
-    { label: 'Python', value: 'python' },
-    { label: 'C#', value: 'csharp' },
-    { label: 'Java', value: 'java' },
-    { label: 'JavaScript', value: 'javascript' },
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Python', value: 'python'},
+    {label: 'C#', value: 'csharp'},
+    {label: 'Java', value: 'java'},
+    {label: 'JavaScript', value: 'javascript'},
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
