--- a/frontend/tips/27-parallel/main.mdx
+++ b/frontend/tips/27-parallel/main.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'How to Speed Up Your Tests With Parallelization'
 id: '27-parallel'
+slug: /27-parallel
 contentUrl: "tips/parallel/27-parallel"
 sidebar_label: Parallelization
 text: "Compared to Unit and Integration Tests, Selenium is slow. A single test can easily take minutes to run. And when you have a lot of them, it can quickly compound your suite to take hours to complete (just for a single browser) -- hampering your ability to get fast feedback."
@@ -8,8 +9,6 @@ number: 27
 hide_table_of_contents: true
 level: 2
 publish_date: 2013-11-26
-last_update:
-    date: 2023-03-10
 tags:
   - 'parallelization'
   - 'good test writing'
@@ -39,8 +38,8 @@ well worth the effort.
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"27-parallel"} languages={[
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
