--- a/frontend/tips/28-upgrading-from-rc/main.mdx
+++ b/frontend/tips/28-upgrading-from-rc/main.mdx
@@ -1,20 +1,19 @@
 ---
 title: 'How to Upgrade from Selenium RC to WebDriver'
 id: '28-upgrading-from-rc'
+slug: /28-upgrading-from-rc
 contentUrl: "tips/upgrading-from-rc/28-upgrading-from-rc"
 sidebar_label: 'Upgrade from Selenium RC to WebDriver'
 text: 'As the Selenium project continues to evolve, Selenium RC is moving closer to end-of-life. This is especially true with the upcoming release of Selenium 3 where minimal support will be offered for RC'
 hide_table_of_contents: true
 number: 28
 publish_date: 2015-10-13
-last_update:
-    date: 2023-03-15
 tags:
   - 'selenium rc'
   - upgrading
 level: 2
 category:
-    - fundamentals
+  - 'fundamentals'
 ---
 
 # How to Upgrade from Selenium RC to WebDriver
