--- a/frontend/tips/30-mobile/main.mdx
+++ b/frontend/tips/30-mobile/main.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'How to Test Your Mobile App'
 id: 30-mobile
+slug: /30-mobile
 contentUrl: "tips/mobile/30-mobile"
 sidebar_label: Mobile
 text: "Mobile is kind of a big deal. And if you haven't needed to test a mobile app yet, it's only a matter of time. But where do you start? And how do you do it in a way that is complimentary to your existing automation and experience?"
@@ -8,8 +9,6 @@ number: 30
 hide_table_of_contents: true
 level: 2
 publish_date: 2013-12-17
-last_update:
-    date: 2023-03-15
 tags:
   - mobile testing
   - mobile
@@ -52,8 +51,8 @@ __NOTE: These examples were borrowed from
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"30-mobile"} languages={[
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
