Adding slug to tips 39 to 45, shortening url

--- a/frontend/tips/39-drag-and-drop/main.mdx
+++ b/frontend/tips/39-drag-and-drop/main.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'How to Test HTML5 Drag and Drop'
 id: '39-drag-and-drop'
+slug: /39-drag-and-drop
 contentUrl: "tips/drag-and-drop/39-drag-and-drop"
 sidebar_label: How to Test HTML5 Drag and Drop
 text: "Exercising a page's drag-and-drop functionality used to be simple with Selenium's Action Builder, but sadly, it won't work with HTML5 drag and drop."
@@ -8,8 +9,6 @@ number: 39
 hide_table_of_contents: true
 level: 2
 publish_date: 2014-02-25
-last_update:
-  date: 2023-03-02
 tags:
   - 'drag and drop'
   - 'DnD'
@@ -35,8 +34,8 @@ example.
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"39-drag-and-drop"} languages={[
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
