--- a/frontend/tips/40-disabled-element/main.mdx
+++ b/frontend/tips/40-disabled-element/main.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Disabled Element'
 id: '40-disabled-element'
+slug: /40-disabled-element
 contentUrl: "tips/disabled-element/40-disabled-element"
 sidebar_label: Disabled Element
 text: "On occasion you may have the need to check if an element on a page is disabled or enabled. Unfortunately, this is not a well-documented function of Selenium, so doing a trivial action like this can quickly become a pain."
@@ -8,8 +9,6 @@ number: 40
 hide_table_of_contents: true
 level: 2
 publish_date: 2015-07-06
-last_update:
-  date: 2023-03-02
 tags:
   - 'dropdown list'
   - 'dropdown lists'
@@ -37,12 +36,12 @@ Let's take a look at how to use it.
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"40-disabled-element"} languages={[
-    { label: 'Python', value: 'python' },
-    { label: 'C#', value: 'csharp' },
-    { label: 'Java', value: 'java' },
-    { label: 'JavaScript', value: 'javascript' },
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Python', value: 'python'},
+    {label: 'C#', value: 'csharp'},
+    {label: 'Java', value: 'java'},
+    {label: 'JavaScript', value: 'javascript'},
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
