--- a/frontend/tips/43-forgot-password/main.mdx
+++ b/frontend/tips/43-forgot-password/main.mdx
@@ -1,14 +1,13 @@
 ---
 title: 'How to Test Forgot Password'
 id: '43-forgot-password'
+slug: /43-forgot-password
 contentUrl: "tips/forgot-password/43-forgot-password"
 sidebar_label: "How to Test Forgot Password"
 text: "Testing e-mail can be a tricky process. Especially when dealing with things like forgot password. A lot of times this is something that gets checked manually. Or worse, it gets overlooked and ends up broken in production."
 hide_table_of_contents: true
 number: 43
 publish_date: 2015-10-15
-last_update:
-    date: 2023-03-20
 tags:
   - 'forgot password'
   - 'email'
@@ -37,8 +36,8 @@ on [the-internet](https://github.com/saucelabs/the-internet).
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"43-forgot-password"} languages={[
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
