--- a/frontend/tips/45-how-to-test-checkboxes/main.mdx
+++ b/frontend/tips/45-how-to-test-checkboxes/main.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'How To Test Checkboxes'
 id: '45-checkboxes'
+slug: /45-checkboxes
 contentUrl: "tips/how-to-test-checkboxes/45-checkboxes"
 sidebar_label: How To Test Checkboxes
 text: "Checkboxes are an often used element in web applications. This guide will show you how to work with them in your Selenium tests."
@@ -8,8 +9,6 @@ number: 45
 hide_table_of_contents: true
 level: 1
 publish_date: 2015-10-13
-last_update:
-  date: 2023-02-22
 tags:
   - 'checkboxes'
   - 'attribute'
@@ -39,12 +38,12 @@ We're going to go through each of these approaches to see their pros and cons.
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"45-how-to-test-checkboxes"} languages={[
-    { label: 'Python', value: 'python' },
-    { label: 'C#', value: 'csharp' },
-    { label: 'Java', value: 'java' },
-    { label: 'JavaScript', value: 'javascript' },
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Python', value: 'python'},
+    {label: 'C#', value: 'csharp'},
+    {label: 'Java', value: 'java'},
+    {label: 'JavaScript', value: 'javascript'},
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
