--- a/frontend/tips/41-one-test-multiple-browsers/main.mdx
+++ b/frontend/tips/41-one-test-multiple-browsers/main.mdx
@@ -1,14 +1,13 @@
 ---
 title: 'How to Run a Test on Multiple Browsers'
 id: '41-one-test-multiple-browsers'
+slug: /41-one-test-multiple-browsers
 contentUrl: "tips/one-test-multiple-browsers/41-one-test-multiple-browsers"
 sidebar_label: "How to Run a Test on Multiple Browsers"
 text: "You'll occasionally have something that you want to test across multiple browsers. It would be nice to run your test once and have it execute against all the browsers you care about. Unfortunately this functionality doesn't come out of the box with most testing frameworks."
 hide_table_of_contents: true
 number: 41
 publish_date: 2014-03-11
-last_update:
-    date: 2023-03-20
 tags:
   - 'multiple browsers'
   - 'cloud'
@@ -37,8 +36,8 @@ Let's take a look at an example.
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"41-one-test-multiple-browsers"} languages={[
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
