--- a/frontend/tips/42-one-test-multiple-browsers-parallel/main.mdx
+++ b/frontend/tips/42-one-test-multiple-browsers-parallel/main.mdx
@@ -1,14 +1,13 @@
 ---
 title: 'How to Run a Test on Multiple Browsers, In Parallel'
 id: '42-one-test-multiple-browsers-parallel'
+slug: /42-one-test-multiple-browsers-parallel
 contentUrl: "tips/one-test-multiple-browsers-parallel/42-one-test-multiple-browsers-parallel"
 sidebar_label: "How to Run a Test on Multiple Browsers, In Parallel"
 text: "In the previous tip I covered how to run a single test against multiple browsers. While this could come in handy, it is still a bit lacking."
 hide_table_of_contents: true
 number: 42
 publish_date: 2014-03-18
-last_update:
-    date: 2023-03-20
 tags:
   - 'parallelization'
   - 'multiple browsers'
@@ -40,8 +39,8 @@ and parallelize it with the help of [threads](http://www.tutorialspoint.com/ruby
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"42-one-test-multiple-browsers-parallel"} languages={[
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
