--- a/frontend/tips/44-exception-handling/main.mdx
+++ b/frontend/tips/44-exception-handling/main.mdx
@@ -2,14 +2,13 @@
 title: 'How To Handle Exceptions'
 id: '44-exception-handling'
 sidebar_label: How To Handle Exceptions
+slug: /44-exception-handling
 contentUrl: "tips/exception-handling/44-exception-handling"
 text: "It doesn't take long when using Selenium before you run into errors from Selenium that may seem inexplicable . They can be a bit of a shock if you're not sure what they are, how to handle them, or where to find documentation on how to address them."
 number: 44
 hide_table_of_contents: true
 level: 2
 publish_date: 2015-07-01
-last_update:
-  date: 2023-03-15
 tags:
   - 'exceptions'
   - 'exception handling'
@@ -39,8 +38,8 @@ Let's take a look at an example.
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"44-exception-handling"} languages={[
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
