Adding slug to tips 47 to 73, shortening url

--- a/frontend/tips/47-waiting/main.mdx
+++ b/frontend/tips/47-waiting/main.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Implicit vs Explicit Waits'
 id: 47-waiting
+slug: /47-waiting
 contentUrl: "tips/waiting/47-waiting"
 sidebar_label: Implicit vs Explicit Waits
 text: "In order to make our Selenium tests resilient, we need to make them wait for certain elements to load. Elements that we want to interact with. This is especially true with JavaScript heavy pages."
@@ -8,8 +9,6 @@ number: 47
 hide_table_of_contents: true
 level: 2
 publish_date: 2015-10-13
-last_update:
-  date: 2023-03-15
 tags:
   - 'waiting'
   - 'dynamic pages'
@@ -45,8 +44,8 @@ Let's continue with some examples.
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"47-waiting"} languages={[
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
