--- a/frontend/tips/48-load-testing/main.mdx
+++ b/frontend/tips/48-load-testing/main.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Load Testing'
 id: '48-load-testing'
+slug: /48-load-testing
 contentUrl: "tips/load-testing/48-load-testing"
 sidebar_label: Load Testing
 text: "How do you do load testing in Selenium? While there are plenty of resources citing that while it _can_ be done, there are better tools for the job. Tools like JMeter are often recommended, but they can be intimidating and challenging to get started."
@@ -8,8 +9,6 @@ number: 48
 hide_table_of_contents: true
 level: 3
 publish_date: 2014-04-30
-last_update:
-  date: 2023-04-06
 tags:
   - 'load testing'
 category: 'fundamentals'
@@ -42,8 +41,8 @@ Let's continue with an example.
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"48-load-testing"} languages={[
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
