--- a/frontend/tips/49-performance-testing/main.mdx
+++ b/frontend/tips/49-performance-testing/main.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'How to Do Performance Testing'
 id: '49-performance-testing'
+slug: /49-performance-testing
 contentUrl: "tips/performance-testing/49-performance-testing"
 sidebar_label: How to Do Performance Testing
 text: "Odds are pretty good that your production application has some kind of performance monitoring in place (e.g., New Relic). This goes a long way towards identifying when something detrimental has been released into the wild."
@@ -8,8 +9,6 @@ number: 49
 hide_table_of_contents: true
 level: 3
 publish_date: 2014-05-06
-last_update:
-  date: 2023-04-06
 tags:
   - 'performance testing'
   - 'proxy'
@@ -39,8 +38,8 @@ Let's dig in with an example.
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"49-performance-testing"} languages={[
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
