--- a/frontend/tips/53-growl/main.mdx
+++ b/frontend/tips/53-growl/main.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Growl'
 id: 53-growl
+slug: /53-growl
 contentUrl: "tips/growl/53-growl"
 sidebar_label: Growl
 text: "Good test reports are a fundamental component of successful test automation, but running down a test failure by looking at a test report can be a real pain sometimes. Oftentimes, you're left to decipher debug statements, or go through things piece by piece all for the sake of trying to track down a transient issue."
@@ -8,8 +9,6 @@ number: 53
 hide_table_of_contents: true
 level: 2
 publish_date: 2014-06-03
-last_update:
-  date: 2023-03-25
 tags:
   - 'jquery'
   - 'growl'
@@ -42,12 +41,12 @@ Let's step through an example of how to set this up.
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"53-growl"} languages={[
-    { label: 'Python', value: 'python' },
-    { label: 'C#', value: 'csharp' },
-    { label: 'Java', value: 'java' },
-    { label: 'JavaScript', value: 'javascript' },
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Python', value: 'python'},
+    {label: 'C#', value: 'csharp'},
+    {label: 'Java', value: 'java'},
+    {label: 'JavaScript', value: 'javascript'},
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
