--- a/frontend/tips/54-logging/main.mdx
+++ b/frontend/tips/54-logging/main.mdx
@@ -1,6 +1,7 @@
 ---
 title: "How to Access Selenium Logs in Real-Time"
 id: "54-logging"
+slug: /54-logging
 contentUrl: "tips/logging/54-logging"
 sidebar_label: "How to Access Selenium Logs in Real-Time"
 text: "Logging is a deep rabbit hole to fall down in Selenium. The documentation isn't complete and the approach for each of the browser and language bindings is inconsistent and hard to find examples for."
@@ -34,8 +35,8 @@ agnostic way that also gets us the information in real time.
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"54-logging"} languages={[
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
