--- a/frontend/tips/55-wrapper/main.mdx
+++ b/frontend/tips/55-wrapper/main.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Wrapper'
 id: '55-wrapper'
+slug: /55-wrapper
 contentUrl: "tips/wrapper/55-wrapper"
 sidebar_label: Wrapper
 text: "There may come a time where you want to access Selenium logs in real time. Although there is a way to do this where you have to explicitly request the logs after each test action, what if we wanted information for every test action?"
@@ -8,8 +9,6 @@ number: 55
 hide_table_of_contents: true
 level: 2
 publish_date: 2014-06-17
-last_update:
-  date: 2023-03-06
 tags:
   - 'wrapper'
   - 'growl'
@@ -30,8 +29,8 @@ for **every** test action?
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"55-wrapper"} languages={[
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
