--- a/frontend/tips/58-tagging/main.mdx
+++ b/frontend/tips/58-tagging/main.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Tagging'
 id: '58-tagging'
+slug: /58-tagging
 contentUrl: "tips/tagging/58-tagging"
 sidebar_label: Tagging
 text: "As your test suite grows you'll likely employ some kind of folder structure to help make sense of everything -- grouping similar tests together. But what do you do when you want to run a set of tests that span across your organizational structure? Especially when your organizational structure isn't set in stone?"
@@ -8,8 +9,6 @@ number: 58
 hide_table_of_contents: true
 level: 1
 publish_date: 2014-07-09
-last_update:
-  date: 2023-02-22
 tags:
   - 'tagging'
   - 'tags'
@@ -47,8 +46,8 @@ Let's start with an example.
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"58-tagging"} languages={[
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
