--- a/frontend/tips/64-limit-bandwidth/main.mdx
+++ b/frontend/tips/64-limit-bandwidth/main.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Limit Bandwidth'
 id: '64-limit-bandwidth'
+slug: /64-limit-bandwidth
 contentUrl: "tips/limit-bandwidth/64-limit-bandwidth"
 sidebar_label: Limit Bandwidth
 text: "With Selenium you have the luxury of cross browser testing. But what happens when you also need to test how your application behaves on a _slow_ connection?"
@@ -8,8 +9,6 @@ number: 64
 hide_table_of_contents: true
 level: 3
 publish_date: 2015-10-16
-last_update:
-  date: 2023-04-06
 tags:
   - 'browsermob-proxy'
 category:
@@ -28,19 +27,9 @@ your application behaves on a _slow_ connection?
 With the help of a proxy server like [BrowserMob Proxy](http://bmp.lightbody.net/) we can simulate bandwidth limitations and run our
 tests to see if they fall down. In order to do this we'll also need to adjust our Selenium's default timeout.
 
->### A Brief Primer on BrowserMob Proxy
->
->BrowserMob Proxy is a server which sits between your browser and the application you're testing. You connect
->to it by configuring a browser profile to pass through it. As listed on
+>### A Brief Primer on BrowserMob ProxyBrowserMob Proxy is a server which sits between your browser and the application you're testing. You connectto it by configuring a browser profile to pass through it. As listed on
 >[the BrowserMob Proxy GitHub page](https://github.com/lightbody/browsermob-proxy#features-and-usage), here are some
->of the benefits it offers:
->
->+ blacklisting and whitelisting certain URL patterns
->+ simulating various bandwidth and latency
->+ remapping DNS lookups
->+ flushing DNS caching
->+ controlling DNS and request timeouts
->+ automatic BASIC authorization
+>of the benefits it offers:+ blacklisting and whitelisting certain URL patterns+ simulating various bandwidth and latency+ remapping DNS lookups+ flushing DNS caching+ controlling DNS and request timeouts+ automatic BASIC authorization
 
 __NOTE:__ You can also capture HTTP status codes with it as well. See [tip 17](/tips/17-retrieve-http-status-codes) for details on how to do that.
 
@@ -51,8 +40,8 @@ Let's continue with an example.
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"64-limit-bandwidth"} languages={[
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
