--- a/frontend/tips/67-broken-images/main.mdx
+++ b/frontend/tips/67-broken-images/main.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Broken Images'
 id: '67-broken-images'
+slug: /67-broken-images
 contentUrl: "tips/broken-images/67-broken-images"
 sidebar_label: Broken Images
 text: "Selenium is built to mimic human action (e.g., clicking, typing, dragging, dropping, etc.). So how do you use it to test for broken images?"
@@ -8,8 +9,6 @@ number: 67
 hide_table_of_contents: true
 level: 3
 publish_date: 2015-10-20
-last_update:
-  date: 2023-04-06
 tags:
   - 'broken image'
   - 'broken images'
@@ -45,8 +44,8 @@ Lets look at an example of each.
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"67-broken-images"} languages={[
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
