--- a/frontend/tips/68-load-testing-revisited/main.mdx
+++ b/frontend/tips/68-load-testing-revisited/main.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Load Testing Revisited'
 id: '68-load-testing-revisited'
+slug: /68-load-testing-revisited
 contentUrl: 'tips/load-testing-revisited/68-load-testing-revisited'
 sidebar_label: Load Testing Revisited
 text: "In [a previous tip](http://elementalselenium.com/tips/48-load-testing) I demonstrated a way to accomplish a simple load test with a Selenium script and an HTTP library. While it works, it's only useful for rudimentary test cases. For more involved test cases and more powerful load generation, we're going to need something stronger."
@@ -8,8 +9,6 @@ number: 68
 hide_table_of_contents: true
 level: 3
 publish_date: 2014-10-08
-last_update:
-  date: 2023-04-06
 tags:
   - 'jmeter'
   - 'load testing'
@@ -43,8 +42,8 @@ Let's dig in with an example.
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"68-load-testing-revisited"} languages={[
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
