--- a/frontend/tips/69-safari/main.mdx
+++ b/frontend/tips/69-safari/main.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'SafariDriver'
 id: '69-safari-driver'
+slug: /69-safari-driver
 contentUrl: 'tips/safari/69-safari-driver'
 sidebar_label: SafariDriver
 text: 'Since Selenium 2.45.0, in order to use SafariDriver, you need to manually install the SafariDriver browser extension.'
@@ -8,8 +9,6 @@ number: 69
 hide_table_of_contents: true
 level: 1
 publish_date: 2015-08-25
-last_update:
-  date: 2023-03-13
 tags:
   - 'safari'
   - 'drivers'
@@ -37,9 +36,9 @@ The following example will go through how to do it and make sure it's working.
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"69-safari"} languages={[
-    { label: 'Java', value: 'java' },
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Java', value: 'java'},
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
