--- a/frontend/tips/50-how-to-work-with-hovers/main.mdx
+++ b/frontend/tips/50-how-to-work-with-hovers/main.mdx
@@ -1,14 +1,13 @@
 ---
 title: 'How To Work With Hovers'
 id: '50-hovers'
+slug: /50-hovers
 contentUrl: "tips/how-to-work-with-hovers/50-hovers"
 sidebar_label: How To Work With Hovers
 text: "If you need to work with mouse hovers in your tests, it might not be obvious how to do this with Selenium. A quick search through the official Selenium documentation can also be confusing, and might leave you scouring online forums and search engines for the solution."
 number: 50
 hide_table_of_contents: true
 publish_date: 2015-07-01
-last_update:
-  date: 2023-02-22
 tags:
   - 'hover'
   - 'hovers'
@@ -37,12 +36,12 @@ done by telling Selenium which element we want to move the mouse to, and then pe
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"50-how-to-work-with-hovers"} languages={[
-    { label: 'Python', value: 'python' },
-    { label: 'C#', value: 'csharp' },
-    { label: 'Java', value: 'java' },
-    { label: 'JavaScript', value: 'javascript' },
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Python', value: 'python'},
+    {label: 'C#', value: 'csharp'},
+    {label: 'Java', value: 'java'},
+    {label: 'JavaScript', value: 'javascript'},
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
