--- a/frontend/tips/51-how-to-work-with-javascript-alerts/main.mdx
+++ b/frontend/tips/51-how-to-work-with-javascript-alerts/main.mdx
@@ -1,14 +1,13 @@
 ---
 title: 'How To Work With JavaScript Alerts'
 id: '51-javascript-alerts'
+slug: /51-javascript-alerts
 contentUrl: "tips/how-to-work-with-javascript-alerts/51-javascript-alerts"
 sidebar_label: How To Work With JavaScript Alerts
 text: 'Built into Selenium is the ability to switch to an alert window and either accept or dismiss it. This way your tests can continue unencumbered by dialog boxes that may feel just out of reach.'
 number: 51
 hide_table_of_contents: true
 publish_date: 2015-07-01
-last_update:
-  date: 2023-02-22
 tags:
   - 'javascript'
   - 'javascript alerts'
@@ -41,12 +40,12 @@ tests can continue unencumbered by dialog boxes that may feel just out of reach.
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"51-how-to-work-with-javascript-alerts"} languages={[
-    { label: 'Python', value: 'python' },
-    { label: 'C#', value: 'csharp' },
-    { label: 'Java', value: 'java' },
-    { label: 'JavaScript', value: 'javascript' },
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Python', value: 'python'},
+    {label: 'C#', value: 'csharp'},
+    {label: 'Java', value: 'java'},
+    {label: 'JavaScript', value: 'javascript'},
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
