--- a/frontend/tips/56-retry-failed-tests/main.mdx
+++ b/frontend/tips/56-retry-failed-tests/main.mdx
@@ -1,14 +1,13 @@
 ---
 title: "How to Automatically Retry Failed Tests"
 id: "56-retry-failed-tests"
+slug: /56-retry-failed-tests
 contentUrl: "tips/retry-failed-tests/56-retry-failed-tests"
 sidebar_label: "How to Automatically Retry Failed Tests"
 text: "You want reliable tests. But no matter how hard you try, you're going to run into intermittent test failures. These can be frustrating time wasters that distract you and your team and begin to erode the trust placed in the automated tests."
 hide_table_of_contents: true
 number: 56
 publish_date: 2014-06-24
-last_update:
-    date: 2023-04-06
 tags:
   - 'retry'
   - 'failure retry'
@@ -37,8 +36,8 @@ Let's continue with an example.
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"56-retry-failed-tests"} languages={[
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
