--- a/frontend/tips/57-junit-xml/main.mdx
+++ b/frontend/tips/57-junit-xml/main.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'How To Prepare Your Tests For Continuous Integration'
 id: '57-junit-xml'
+slug: /57-junit-xml
 contentUrl: "tips/junit-xml/57-junit-xml"
 sidebar_label: "How To Prepare Your Tests For Continuous Integration"
 text: "If you want your Selenium tests to automatically run and report failures to you and your team, you'll want to wire them up to a Continuous Integration server."
@@ -8,8 +9,6 @@ number: 57
 hide_table_of_contents: true
 level: 1
 publish_date: 2015-07-14
-last_update:
-  date: 2023-02-22
 tags:
   - 'xml'
   - 'junit xml'
@@ -45,8 +44,8 @@ Let's go through an example of how to configure a test suite in order to output 
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"57-junit-xml"} languages={[
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
