--- a/frontend/tips/60-list-tags/main.mdx
+++ b/frontend/tips/60-list-tags/main.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'List Tags'
 id: '60-list-tags'
+slug: /60-list-tags
 contentUrl: 'tips/list-tags/60-list-tags'
 sidebar_label: List Tags
 text: "Tagging is a powerful tool for targeted test execution, as well as a lightweight form of documentation. But what happens when you want to see a summary of the tags you're using across all of your tests? Unfortunately, most solution don't offer this kind of functionality out of the box, leaving you to manually sift through your tests to get a sense of the different tags you're using."
@@ -8,8 +9,6 @@ number: 60
 hide_table_of_contents: true
 level: 3
 publish_date: 2014-07-22
-last_update:
-  date: 2023-03-25
 tags:
   - 'tagging'
   - 'tags'
@@ -38,8 +37,8 @@ Here is an example.
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"60-list-tags"} languages={[
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
