--- a/frontend/tips/61-how-to-press-keyboard-keys/main.mdx
+++ b/frontend/tips/61-how-to-press-keyboard-keys/main.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'How To Press Keyboard Keys'
 id: '61-keyboard-keys'
+slug: /61-keyboard-keys
 contentUrl: "tips/how-to-press-keyboard-keys/61-keyboard-keys"
 sidebar_label: How To Press Keyboard Keys
 text: "On occasion you'll come across functionality that requires the use of keyboard key presses in your tests. Perhaps you'll need to tab to traverse from one portion of the page to another, back out of some kind of menu or overlay with the escape key, or even submit a form with Enter. But how do you do it and where do you start?"
@@ -8,8 +9,6 @@ number: 61
 hide_table_of_contents: true
 level: 1
 publish_date: 2015-10-12
-last_update:
-  date: 2023-02-22
 tags:
   - 'keyboard'
   - 'keys'
@@ -49,12 +48,12 @@ Let's try out a couple of examples.
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"61-how-to-press-keyboard-keys"} languages={[
-    { label: 'Python', value: 'python' },
-    { label: 'C#', value: 'csharp' },
-    { label: 'Java', value: 'java' },
-    { label: 'JavaScript', value: 'javascript' },
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Python', value: 'python'},
+    {label: 'C#', value: 'csharp'},
+    {label: 'Java', value: 'java'},
+    {label: 'JavaScript', value: 'javascript'},
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
