--- a/frontend/tips/63-right-click/main.mdx
+++ b/frontend/tips/63-right-click/main.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Right Click'
 id: '63-right-click'
+slug: /63-right-click
 contentUrl: "tips/right-click/63-right-click"
 sidebar_label: Right Click
 text: "Sometimes you'll run into an app that has functionality hidden behind a right-click menu (a.k.a. a context menu). These menus tend to be system level menus that are untouchable by Selenium. So how do you test this functionality?"
@@ -8,8 +9,6 @@ number: 63
 hide_table_of_contents: true
 level: 2
 publish_date: 2015-10-13
-last_update:
-  date: 2023-03-06
 tags:
   - 'right-click'
   - 'right click'
@@ -41,12 +40,12 @@ Let's continue with an example.
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"63-right-click"} languages={[
-    { label: 'Python', value: 'python' },
-    { label: 'C#', value: 'csharp' },
-    { label: 'Java', value: 'java' },
-    { label: 'JavaScript', value: 'javascript' },
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Python', value: 'python'},
+    {label: 'C#', value: 'csharp'},
+    {label: 'Java', value: 'java'},
+    {label: 'JavaScript', value: 'javascript'},
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
