--- a/frontend/tips/65-highlight-elements/main.mdx
+++ b/frontend/tips/65-highlight-elements/main.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Highlight Elements'
 id: '65-highlight-elements'
+slug: /65-highlight-elements
 contentUrl: "tips/highlight-elements/65-highlight-elements"
 sidebar_label: Highlight Elements
 text: "It's likely that you'll run into odd test behavior that makes you question the locators you're using in a test. But how do you interrogate your locators to make sure they are doing what you expect?"
@@ -8,8 +9,6 @@ number: 65
 hide_table_of_contents: true
 level: 2
 publish_date: 2014-09-11
-last_update:
-  date: 2023-03-06
 tags:
   - 'guest post'
   - 'highlight'
@@ -41,11 +40,11 @@ Let's take a look at an example.
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"65-highlight-elements"} languages={[
-    { label: 'Python', value: 'python' },
-    { label: 'C#', value: 'csharp' },
-    { label: 'Java', value: 'java' },
-    { label: 'JavaScript', value: 'javascript' },
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Python', value: 'python'},
+    {label: 'C#', value: 'csharp'},
+    {label: 'Java', value: 'java'},
+    {label: 'JavaScript', value: 'javascript'},
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
