--- a/frontend/tips/66-blacklist/main.mdx
+++ b/frontend/tips/66-blacklist/main.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Blacklist'
 id: '66-blacklist'
+slug: /66-blacklist
 contentUrl: 'tips/blacklist/66-blacklist'
 sidebar_label: Blacklist
 text: "There are plenty of external resources that get loaded onto a page that aren't directly relevant to the functionality you're testing (e.g., Facebook widgets, Analytics, JavaScript snippets, etc.). And these external resources have the potential to negatively impact your test runs due to slow load times."
@@ -8,8 +9,6 @@ number: 66
 hide_table_of_contents: true
 level: 3
 publish_date: 2015-10-20
-last_update:
-  date: 2023-04-06
 tags:
   - 'browsermob-proxy'
   - 'proxy'
@@ -38,8 +37,8 @@ Let's continue with an example.
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"66-blacklist"} languages={[
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
 ## About The Author
