--- a/frontend/tips/72-headless-chrome/main.mdx
+++ b/frontend/tips/72-headless-chrome/main.mdx
@@ -1,14 +1,13 @@
 ---
 title: 'How To Run Your Tests Headlessly with Chrome'
 id: '72-headless-chrome'
+slug: /72-headless-chrome
 contentUrl: 'tips/headless-chrome/72-headless-chrome'
 sidebar_label: Headlessly with Chrome
 text: "If you want to run your tests headlessly on a Continuous Integration (CI) server you'll quickly realize that you can't with an out-of-the-box setup since there is no display output for the browser to launch in."
 number: 72
 hide_table_of_contents: true
 publish_date: 2017-09-25
-last_update:
-  date: 2023-03-06
 tags:
   - 'headless'
   - 'chrome'
@@ -38,7 +37,7 @@ Starting with Chrome 59 (Chrome 60 for Windows) we can pass Chrome a few configu
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"72-headless-chrome"} languages={[
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
