--- a/frontend/tips/73-open-new-window/main.mdx
+++ b/frontend/tips/73-open-new-window/main.mdx
@@ -1,14 +1,13 @@
 ---
 title: 'Open a New Window or Tab'
 id: '73-open-new-window'
+slug: /73-open-new-window
 contentUrl: 'tips/open-new-window/73-open-new-window'
 sidebar_label: Open a New Window or Tab
 text: 'Nearly everyone, at some point during their normal flow of work on the computer, has had to open a new window or tab. In fact, many of us often end up with several tabs open. It makes sense that this should be tested using Selenium.'
 number: 73
 hide_table_of_contents: true
 publish_date: 2023-02-17
-last_update:
-  date: 2023-03-15
 tags:
   - 'new window'
   - 'new tab'
@@ -45,8 +44,8 @@ With the release of Selenium 4 comes the `newWindow` command which allows you to
 import DisplayTips from '@site/src/components/displayTips';
 
 <DisplayTips contentPath={"63-right-click"} languages={[
-    { label: 'Java', value: 'java' },
-    { label: 'Ruby', value: 'ruby' },
-]} />
+    {label: 'Java', value: 'java'},
+    {label: 'Ruby', value: 'ruby'},
+]}/>
 
 
