--- a/frontend/tips/73-open-new-window/main.mdx
+++ b/frontend/tips/73-open-new-window/main.mdx
@@ -42,7 +42,7 @@ With the release of Selenium 4 comes the `newWindow` command which allows you to
 
 import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"63-right-click"} languages={[
+<DisplayTips contentPath={"73-open-new-window"} languages={[
     {label: 'Java', value: 'java'},
     {label: 'Ruby', value: 'ruby'},
 ]}/>
