Fixing link to see the whole solution

--- a/frontend/tips/1-upload-a-file/_python.mdx
+++ b/frontend/tips/1-upload-a-file/_python.mdx
@@ -1,5 +1,5 @@
-import TipCode from "../../src/components/tipCode";
-import DefaultAvatar from "../../src/components/defaultAvatar";
+import TipCode from "@site/src/components/tipCode";
+import DefaultAvatar from "@site/src/components/defaultAvatar";
 
 ## TL;DR - Show Me The Code
 
@@ -53,7 +53,7 @@ After installing the required libraries, we can run the test by executing `pytes
 <DefaultAvatar
     name="Mike Millgate"
     imgSrc={"https://github.com/trabulmonkee.png"}
-    description={"For contributing the code for this tip"}
+    description={"For contributing the Python code for this tip"}
 />
 <DefaultAvatar
     name="Isaul Vargas"
