--- a/frontend/tips/1-upload-a-file/_python.mdx
+++ b/frontend/tips/1-upload-a-file/_python.mdx
@@ -53,7 +53,7 @@ After installing the required libraries, we can run the test by executing `pytes
 <DefaultAvatar
     name="Mike Millgate"
     imgSrc={"https://github.com/trabulmonkee.png"}
-    description={"For contributing the Python code for this tip"}
+    description={"Contributed the Python code for this tip"}
 />
 <DefaultAvatar
     name="Isaul Vargas"
