--- a/frontend/tips/1-upload-a-file/_csharp.mdx
+++ b/frontend/tips/1-upload-a-file/_csharp.mdx
@@ -1,96 +1,58 @@
-First let's pull in our requisite classes for our testing framework (e.g., `using NUnit.Framework;`), driving the
-browser with Selenium (e.g., `using OpenQA.Selenium;`), and launching an instance of Firefox (
-e.g., `using OpenQA.Selenium.Firefox;`).
+import TipCode from "@site/src/components/tipCode";
+import DefaultAvatar from "@site/src/components/defaultAvatar";
 
-```csharp
-// filename: FileUpload.cs
-using NUnit.Framework;
-using OpenQA.Selenium;
-using OpenQA.Selenium.Firefox;
-// ...
-```
+## TL;DR - Show Me The Code
 
-Now to create a class and take care of the test's setup and teardown.
+<TipCode codePath={"1-upload-a-file/code/csharp/FileUploadTest.cs"} language={"csharp"}/>
 
-```csharp
-// filename: FileUpload.cs
-// ...
-public class FileUpload
-{
-    IWebDriver Driver;
+## Code Walkthrough
 
-    [SetUp]
-    public void SetUp()
-    {
-        Driver = new FirefoxDriver();
-    }
+### Importing Libraries
 
-    [TearDown]
-    public void TearDown()
-    {
-        Driver.Quit();
-    }
-// ...
-```
+Lines 1 to 5 are pulling in our requisite classes for interacting with the operating system (e.g., `using System.IO;`),
+our testing framework (e.g., `using Microsoft.VisualStudio.TestTools.UnitTesting;`), driving the browser with
+Selenium (e.g., `using OpenQA.Selenium;`), and launching an instance of Firefox
+(e.g., `using OpenQA.Selenium.Firefox;`).
 
-After specifying the class (e.g., `public class FileUpload`) we create a field variable (e.g., `IWebDriver Driver;`) to
-store our Selenium instance for reuse throughout the class. We then create a `SetUp()` method with a `[SetUp]` attribute
-so it runs before our test. In this method we are creating an instance of Selenium with Firefox (
-e.g., `Driver = new FirefoxDriver();`).
+### Setup and Teardown
 
-After our test executes, the `TearDown()` method will run thanks to the `[TearDown]` attribute. This
-calls `Driver.Quit();` which will close the browser instance.
 
-Now to wire up our test.
+After specifying the namespace and the class (e.g., `public class FileUploadTest`), lines 12 to 24 are setting up and
+tearing down the browser instance.
 
-```csharp
-// filename: FileUpload.cs
-// ...
-    [Test]
-    public void UploadFileFromDisk()
-    {
-        string File = "SomeFile.txt";
-        string FilePath = @"C:\Temp\" + File;
+First we create a field variable (e.g., `IWebDriver _driver;`) to store our WebDriver instance for reuse throughout
+the class. We then create a `SetUp()` method with a `[TestInitialize]` attribute so it runs before our test. In this
+method we are creating an instance of WebDriver with Firefox (e.g., `_driver = new FirefoxDriver();`).
 
-        Driver.Navigate().GoToUrl("http://the-internet.herokuapp.com/upload");
-        Driver.FindElement(By.Id("file-upload")).SendKeys(FilePath);
-        Driver.FindElement(By.Id("file-submit")).Click();
+After our test executes, the `TearDown()` method will run thanks to the `[TestCleanup]` attribute. This
+calls `_driver?.Quit();` which will close the browser instance.
 
-        IWebElement FileUploaded = Driver.FindElement(By.Id("uploaded-files"));
-        Assert.IsTrue(FileUploaded.Text == File, "The File Did Not Upload Correctly");
-    }
-}
-```
 
-We create an `UploadFileFromDisk()` method and add a `[Test]` attribute so it is run as a test. In it we leverage a file
-from local disk by specifying the file (e.g., `SomeFile.txt`) and its path (e.g., currently set to `C:\Temp\`, adapt as
-needed to suit your needs).
+### The Test
 
-**NOTE: The value for `FilePath` starts with a `@` symbol. This denotes that what follows after it is a string literal.
-If we didn't have it, we would need to escape our backslashes (e.g, `"C:\\Temp\\").**
+Lines 29 to 37 are the test itself.
 
-Next we visit the page with the upload form, input the string value of `FilePath` (e.g., the full path to the file plus
-the filename with its extension), and submit the form. After the file is uploaded to the page it will display the
+We create an `UploadFileFromDisk()` method and add a `[TestMethod]` attribute, so it is run as a test. In it, we leverage
+a file from local disk by specifying the file (e.g., `SomeFile.txt`) and its path (e.g., the file is assumed to be in
+the same directory as the test).
+
+Next we visit the page with the upload form, input the string value of `uploadFile` (e.g., the full path to the file
+plus the filename with its extension), and submit the form. After the file is uploaded to the page it will display the
 filename it just processed. We use this text to perform our assertion (making sure the uploaded file is what we expect).
 
-## Expected Behavior
+### Executing the Test
 
-When we save this file and run it (e.g., `nunit3-console.exe .\FileUpload.sln` from the command-line) here is what will
-happen:
+Before executing the test, we need to make sure the required dependencies are declared on the project file (e.g.,
+`csharp.csproj` in this case). Here's what the project file looks like:
 
-- Open the browser
-- Visit the upload form page
-- Inject the file path into the form and submit it
-- Page displays the uploaded filename
-- Grab the text from the page and assert it's what we expect
-- Close the browser
+<TipCode codePath={"1-upload-a-file/code/csharp/csharp.csproj"} language={"xml"}/>
 
-## Summary
+Finally, we can run the test by executing `dotnet test` from the command-line.
 
-This approach will work across all browsers. If you want to use it with a remote instance (e.g., on Selenium Grid or
-Sauce Labs) then you'll want to have a look
-at [`IAllowsFileDetection`](http://seleniumhq.github.io/selenium/docs/api/dotnet/html/T_OpenQA_Selenium_IAllowsFileDetection.htm).
+### Special Thanks
 
-Thanks to Jonathan Taylor for contributing the initial C# code for this tip!
-
-Happy Testing!
+<DefaultAvatar
+    name="Jonathan Taylor"
+    imgSrc={"https://github.com/jtay2380.png"}
+    description={"Contributed the initial C# code for this tip!"}
+/>
